endgame goin goooooooooood

--- a/app/src/main/res/layout/activity_cycle.xml
+++ b/app/src/main/res/layout/activity_cycle.xml
@@ -191,6 +191,17 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_cycle_enter_endgame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:layout_margin="@dimen/fab_margin"
+        android:clickable="true"
+        android:focusable="true"
+        android:onClick="tryToGoToEndgame"
+        app:srcCompat="@drawable/ic_baseline_check_24px" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_cycle_enter_new_cycle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
