--- a/app/src/main/res/layout/activity_endgame.xml
+++ b/app/src/main/res/layout/activity_endgame.xml
@@ -145,7 +145,7 @@
         android:layout_margin="@dimen/fab_margin"
         android:clickable="true"
         android:focusable="true"
-        android:onClick="save"
+        android:onClick="saveData"
         app:srcCompat="@drawable/ic_baseline_check_24px" />
 
 </FrameLayout>
